--- a/foodar.css
+++ b/foodar.css
@@ -22,11 +22,22 @@
 	#banner{
 		position:relative;
 		height:100%;
-		width: 100%;
-		padding 100px 100px;
+		width: 50%;
+		margin:50px;
+		padding: 20px 20px;
 		text-align: center;
 		letter-spacing:2px;
 		text-shadow: 1px 0px 10px white;
+		
+		
+	
+	}
+	
+	#close{
+		float:right;
+		display:inline-block;
+		padding:2px 5px;
+		background:white;
 	}
 	
 	.big{
@@ -41,7 +52,7 @@
 	}
 	
 	body{
-		background-color: lightgrey;
+		background-color: #e6e6e6;
 		color: black;
 	}
 		
@@ -66,8 +77,8 @@
 	}
 	#signin{
 		direction: rtl;
-		top 10px;
-		right 10px;
+		top: 10px;
+		right: 10px;
 	}
 	
 	#zipAndGo{
