--- a/foodar.css
+++ b/foodar.css
@@ -4,7 +4,7 @@
 	a{
 		text-decoration:none;
 		text-transform:uppercase;
-		color:black;
+		color:red;
 	}
 	a:hover{
 		background:black;
@@ -15,8 +15,12 @@
 		background:black;
 	}
 	
-	p{
-		text-indent:10px;
+	
+	#aboutContent{
+		margin:auto;
+		width: 50%;
+		display:block;
+		background-color:white;
 	}
 	
 	#banner{
@@ -54,6 +58,8 @@
 	body{
 		background-color: #e6e6e6;
 		color: black;
+		
+		
 	}
 		
 	label{
@@ -75,26 +81,30 @@
 	img{
 		background-color:white;
 	}
+	
+	
+	#wrap{
+		background:url(burger.jpg);
+		width:50%;
+		background-size:cover;
+		margin:auto;
+	}
+	
+	#textOverImage{
+		text-align:center;
+		line-height:200px;
+		color:yellow;
+		
+	}
+	
 	#signin{
 		direction: rtl;
 		top: 10px;
 		right: 10px;
 	}
 	
-	#zipAndGo{
 	
-	}
 	
-	#content{
-		display:block;
-		background-color:white;
-	}
-	
-	.twentywide{
-		display:block;
-		width:20%;
-		
-	}
 	
 	#wrapper{
 		margin:0 auto;
@@ -107,6 +117,16 @@
 		background-color:#ff3333;
 		margin: 0px 0px 10px 0px;
 		padding:10px;
+		color:black;
+	}
+	
+	#footer a{
+		color:black;
+		
+	}
+	
+	#footer a:hover{
+		background:white;
 	}
 	
 	ul{
